// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs rendering renders tabs component with multiple tabs 1`] = `
<View
  style={
    {
      "backgroundColor": "#ffffff",
      "bottom": 0,
      "flex": 1,
      "left": 0,
      "paddingTop": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 16,
        "paddingVertical": 12,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
      testID="tabs_back_button"
    >
      <View />
    </View>
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#131416",
          "flex": 1,
          "fontFamily": "Geist-SemiBold",
          "fontSize": 20,
          "letterSpacing": 0,
          "lineHeight": 24,
          "textAlign": "center",
        }
      }
      testID="tabs_opened_title"
    >
      Opened tabs
    </Text>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
      testID="tabs_add"
    >
      <View />
    </View>
  </View>
  <RCTScrollView
    contentContainerStyle={
      {
        "backgroundColor": "transparent",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "gap": 12,
        "padding": 16,
      }
    }
    style={
      {
        "backgroundColor": "#f3f3f4",
        "flex": 1,
      }
    }
    testID="tabs-component"
  >
    <View>
      <View
        style={
          [
            {
              "shadowOffset": {
                "height": 4.8,
              },
              "shadowOpacity": 0.192,
              "shadowRadius": 4.32,
            },
            {
              "backgroundColor": "transparent",
              "overflow": "hidden",
            },
          ]
        }
      >
        <View
          accessibilityLabel="Switch tab"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "borderColor": "#4459ff",
              "borderRadius": 12,
              "borderWidth": 3,
              "elevation": 4,
              "height": 345.94,
              "justifyContent": "flex-start",
              "opacity": 1,
              "overflow": "hidden",
              "width": 353,
            }
          }
          testID="browser-tab-1"
        >
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#ffffff",
                "flexDirection": "row",
                "padding": 6,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "flex": 1,
                  "flexDirection": "row",
                  "marginRight": 24,
                }
              }
            >
              <View
                style={
                  {
                    "backgroundColor": "#ffffff",
                    "borderRadius": 16,
                    "height": 16,
                    "marginLeft": 2,
                    "marginRight": 4,
                    "overflow": "hidden",
                    "width": 16,
                  }
                }
              >
                <SvgMock
                  color="#131416"
                  fill="currentColor"
                  height={20}
                  name="Global"
                  style={
                    {
                      "height": 20,
                      "width": 20,
                    }
                  }
                  width={20}
                />
              </View>
              <Text
                accessibilityRole="text"
                numberOfLines={1}
                style={
                  {
                    "color": "#131416",
                    "flex": 1,
                    "fontFamily": "Geist-SemiBold",
                    "fontSize": 12,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                    "marginLeft": 4,
                    "marginRight": 24,
                  }
                }
              >
                example.com
              </Text>
            </View>
            <View
              accessibilityLabel="Close tab"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              hitSlop={
                {
                  "bottom": 10,
                  "left": 10,
                  "right": 10,
                  "top": 10,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
              testID="tab-close-button-1"
            >
              <SvgMock
                color="#131416"
                fill="currentColor"
                height={20}
                name="Close"
                style={
                  {
                    "height": 20,
                    "width": 20,
                  }
                }
                width={20}
              />
            </View>
          </View>
          <View
            style={
              {
                "backgroundColor": "#ffffff",
                "flex": 1,
              }
            }
          >
            <Image
              source={
                {
                  "uri": "image1",
                }
              }
              style={
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "resizeMode": "cover",
                  "right": 0,
                  "top": 0,
                }
              }
            />
          </View>
        </View>
      </View>
      <View
        style={
          [
            {
              "shadowOffset": {
                "height": 4.8,
              },
              "shadowOpacity": 0.192,
              "shadowRadius": 4.32,
            },
            {
              "backgroundColor": "transparent",
              "overflow": "hidden",
            },
          ]
        }
      >
        <View
          accessibilityLabel="Switch tab"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "borderColor": "#949596",
              "borderRadius": 12,
              "borderWidth": 1,
              "elevation": 4,
              "height": 345.94,
              "justifyContent": "flex-start",
              "opacity": 1,
              "overflow": "hidden",
              "width": 353,
            }
          }
          testID="browser-tab-2"
        >
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#ffffff",
                "flexDirection": "row",
                "padding": 6,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "flex": 1,
                  "flexDirection": "row",
                  "marginRight": 24,
                }
              }
            >
              <View
                style={
                  {
                    "backgroundColor": "#ffffff",
                    "borderRadius": 16,
                    "height": 16,
                    "marginLeft": 2,
                    "marginRight": 4,
                    "overflow": "hidden",
                    "width": 16,
                  }
                }
              >
                <SvgMock
                  color="#131416"
                  fill="currentColor"
                  height={20}
                  name="Global"
                  style={
                    {
                      "height": 20,
                      "width": 20,
                    }
                  }
                  width={20}
                />
              </View>
              <Text
                accessibilityRole="text"
                numberOfLines={1}
                style={
                  {
                    "color": "#131416",
                    "flex": 1,
                    "fontFamily": "Geist-SemiBold",
                    "fontSize": 12,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                    "marginLeft": 4,
                    "marginRight": 24,
                  }
                }
              >
                test.com
              </Text>
            </View>
            <View
              accessibilityLabel="Close tab"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              hitSlop={
                {
                  "bottom": 10,
                  "left": 10,
                  "right": 10,
                  "top": 10,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
              testID="tab-close-button-2"
            >
              <SvgMock
                color="#131416"
                fill="currentColor"
                height={20}
                name="Close"
                style={
                  {
                    "height": 20,
                    "width": 20,
                  }
                }
                width={20}
              />
            </View>
          </View>
          <View
            style={
              {
                "backgroundColor": "#ffffff",
                "flex": 1,
              }
            }
          >
            <Image
              source={
                {
                  "uri": "image2",
                }
              }
              style={
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "resizeMode": "cover",
                  "right": 0,
                  "top": 0,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`Tabs rendering renders with single tab 1`] = `
<View
  style={
    {
      "backgroundColor": "#ffffff",
      "bottom": 0,
      "flex": 1,
      "left": 0,
      "paddingTop": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 16,
        "paddingVertical": 12,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
      testID="tabs_back_button"
    >
      <View />
    </View>
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#131416",
          "flex": 1,
          "fontFamily": "Geist-SemiBold",
          "fontSize": 20,
          "letterSpacing": 0,
          "lineHeight": 24,
          "textAlign": "center",
        }
      }
      testID="tabs_opened_title"
    >
      Opened tabs
    </Text>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
      testID="tabs_add"
    >
      <View />
    </View>
  </View>
  <RCTScrollView
    contentContainerStyle={
      {
        "backgroundColor": "transparent",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "gap": 12,
        "padding": 16,
      }
    }
    style={
      {
        "backgroundColor": "#f3f3f4",
        "flex": 1,
      }
    }
    testID="tabs-component"
  >
    <View>
      <View
        style={
          [
            {
              "shadowOffset": {
                "height": 4.8,
              },
              "shadowOpacity": 0.192,
              "shadowRadius": 4.32,
            },
            {
              "backgroundColor": "transparent",
              "overflow": "hidden",
            },
          ]
        }
      >
        <View
          accessibilityLabel="Switch tab"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "borderColor": "#4459ff",
              "borderRadius": 12,
              "borderWidth": 3,
              "elevation": 4,
              "height": 345.94,
              "justifyContent": "flex-start",
              "opacity": 1,
              "overflow": "hidden",
              "width": 353,
            }
          }
          testID="browser-tab-1"
        >
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#ffffff",
                "flexDirection": "row",
                "padding": 6,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "flex": 1,
                  "flexDirection": "row",
                  "marginRight": 24,
                }
              }
            >
              <View
                style={
                  {
                    "backgroundColor": "#ffffff",
                    "borderRadius": 16,
                    "height": 16,
                    "marginLeft": 2,
                    "marginRight": 4,
                    "overflow": "hidden",
                    "width": 16,
                  }
                }
              >
                <SvgMock
                  color="#131416"
                  fill="currentColor"
                  height={20}
                  name="Global"
                  style={
                    {
                      "height": 20,
                      "width": 20,
                    }
                  }
                  width={20}
                />
              </View>
              <Text
                accessibilityRole="text"
                numberOfLines={1}
                style={
                  {
                    "color": "#131416",
                    "flex": 1,
                    "fontFamily": "Geist-SemiBold",
                    "fontSize": 12,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                    "marginLeft": 4,
                    "marginRight": 24,
                  }
                }
              >
                example.com
              </Text>
            </View>
            <View
              accessibilityLabel="Close tab"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              hitSlop={
                {
                  "bottom": 10,
                  "left": 10,
                  "right": 10,
                  "top": 10,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
              testID="tab-close-button-1"
            >
              <SvgMock
                color="#131416"
                fill="currentColor"
                height={20}
                name="Close"
                style={
                  {
                    "height": 20,
                    "width": 20,
                  }
                }
                width={20}
              />
            </View>
          </View>
          <View
            style={
              {
                "backgroundColor": "#ffffff",
                "flex": 1,
              }
            }
          >
            <Image
              source={
                {
                  "uri": "image1",
                }
              }
              style={
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "resizeMode": "cover",
                  "right": 0,
                  "top": 0,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
